--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -13,7 +13,7 @@
 - name : Jason Young
   title: If there is a problem then it's his fault
 
-- name : Tim Staden 
+- name : Tim Standen 
   title: The code janitor
 
 - name : Toby
