worked out the bootstrapper's name via the gource video

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -19,7 +19,7 @@
 - name : Tim Standen
   title: The code janitor
 
-- name : Toby
+- name : Toby Devlin
   title: The drive-by bootstrapper
 
 - name : Vince Knight
