--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #Site settings
 title: Cardiff Math Code Club
-url: "http://CardiffMathCodeClub.github.io"
+url: "http://CardiffMathematicsCodeClub.github.io"
 markdown: kramdown
 
