--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,4 +3,4 @@
   description: 'The very website you are currently looking at.'
 - name: 'A module planner'
   github: https://github.com/alcarney/Module-Planner
-  description: 'A web based tool to graphical display course choice options.'
+  description: 'A web based tool to graphically display course choice options.'
