--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,4 +6,4 @@
   description: 'A web based tool to graphically display course choice options.'
 - name: 'Axelrod'
   github: https://github.com/drvinceknight/Axelrod
-  description: '''A repository used to reproduce Axelrod's tournament http://axelrod.readthedocs.org/'''
+  description: 'A repository used to reproduce Axelrods tournament http://axelrod.readthedocs.org/'
