--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -13,6 +13,9 @@
 - name : Batduck
   title: gramma correction for the real coder
 
+- name : Geraint Palmer
+  title: Theh Traitor
+
 - name : Jason Young
   title: If there is a problem then it's his fault
 
