--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -14,7 +14,7 @@
   title: gramma correction for the real coder
 
 - name : Geraint Palmer
-  title: Theh Traitor
+  title: The Traitor
 
 - name : Jason Young
   title: If there is a problem then it's his fault
