Adding gtihub game challenge

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,3 +7,6 @@
 - name: 'Axelrod'
   github: https://github.com/drvinceknight/Axelrod
   description: 'A repository used to reproduce Axelrods tournament http://axelrod.readthedocs.org/'
+- name: 'The game has changed'
+  github: https://github.com/blog/1972-the-game-has-changed
+  description: 'A game challenge run by github (progress... ongoing...)'
