editied the read the docs link for the Axlerod project. :)

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,11 @@
   description: 'A web based tool to graphically display course choice options.'
 - name: 'Axelrod'
   github: https://github.com/drvinceknight/Axelrod
-  description: 'A repository used to reproduce Axelrods tournament http://axelrod.readthedocs.org/'
+  description: 'A repository used to reproduce Axelrods tournament [Read The Docs] '
 - name: 'The game has changed'
   github: https://github.com/CardiffMathematicsCodeClub/unknown-horizons
   description: 'A game challenge run by github (progress... ongoing...)'
+
+
+
+[Read The Docs]: http://axelrod.readthedocs.org/
