adding a more info link for the game has changed project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,3 +11,4 @@
 - name: 'The game has changed'
   github: https://github.com/CardiffMathematicsCodeClub/unknown-horizons
   description: 'A game challenge run by github (progress... ongoing...)'
+  link: https://github.com/blog/1972-the-game-has-changed
