--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,6 +4,7 @@
 - name: 'A module planner'
   github: https://github.com/alcarney/Module-Planner
   description: 'A web based tool to graphically display course choice options.'
+  link: http://module-planner.readthedocs.org/en/latest/
 - name: 'Axelrod'
   github: https://github.com/drvinceknight/Axelrod
   description: 'A repository used to reproduce Axelrods tournament.'
