--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -1,26 +1,35 @@
 - name : Adam Pohl
   title: Flamboyant Coder
+  emoji: 
 
 - name : Alex Carney
   title: Real Coder
+  emoji:
 
 - name : Ambrose Law
   title: Padawan
+  emoji:
 
 - name : Andy Wilson
   title: Background Graphics Manager
+  emoji:
 
 - name : Batduck
   title: gramma correction for the real coder
+  emoji:
 
 - name : Jason Young
   title: If there is a problem then it's his fault
+  emoji:
 
 - name : Tim Standen
   title: The code janitor
+  emoji:
 
 - name : Toby Devlin
   title: The drive-by bootstrapper
+  emoji:
 
 - name : Vince Knight
   title: Colonel Sarge
+  emoji:
