FIxed the problem with the past sessions :smile:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -20,7 +20,7 @@
   title: If there is a problem then it's his fault
 
 - name : Tim Standen
-  title: The code janitor
+  title: The Code Janitor
 
 - name : Toby Devlin
   title: The drive-by bootstrapper
