Editing some things :smile:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -1,11 +1,11 @@
 - name : Adam Pohl
-  title: Flamboyant Coder
+  title: The Flamboyant Coder
 
 - name : Alex Carney
-  title: Real Coder
+  title: The Real Coder
 
 - name : Ambrose Law
-  title: Padawan
+  title: The Padawan
 
 - name : Andy Wilson
   title: Background Graphics Manager
