mending some stuff :shipit:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -17,7 +17,7 @@
   title: The Traitor
 
 - name : Jason Young
-  title: If there is a problem then it's his fault
+  title: You Know Who
 
 - name : Tim Standen
   title: The Code Janitor
