Adding code of conduct.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,6 +4,8 @@
   url: /blog/
 - text: Past Sessions
   url: /sessions.html
+- text: Code of conduct
+  url: /coc.html
 - text: Projects
   url: /projects/
 - text: Inspiration
