He He He :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -5,7 +5,7 @@
   title: The Real Coder
 
 - name : Ambrose Law
-  title: The Padawan
+  title: Django Jazz Hands
 
 - name : Andy Wilson
   title: Background Graphics Manager
