--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,15 +1,22 @@
 - name: 'The Code Club website'
   github: https://github.com/CardiffMathematicsCodeClub/CardiffMathematicsCodeClub.github.io
   description: 'The very website you are currently looking at.'
+
 - name: 'A module planner'
   github: https://github.com/alcarney/Module-Planner
   description: 'A web based tool to graphically display course choice options.'
   link: http://module-planner.readthedocs.org/en/latest/
+
 - name: 'Axelrod'
   github: https://github.com/Axelrod-Python/Axelrod
   description: 'A repository used to reproduce Axelrods tournament.'
   link: http://axelrod.readthedocs.org/
+
 - name: 'The game has changed'
   github: https://github.com/CardiffMathematicsCodeClub/unknown-horizons
   description: 'A game challenge run by github (progress... ongoing...)'
   link: https://github.com/blog/1972-the-game-has-changed
+
+- name: 'ELBOW!!!'
+  github: https://github.com/CardiffMathematicsCodeClub/elbow
+  description: 'ELBOW ->(translate to french)-> COUDE ->(misspell)-> COUD ->(misspell again)-> CUOD -> Cardiff University Open Day'
