Done the Notepad page for issue #25 :smilin_imp:

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -31,5 +31,7 @@
       subitems:
         - text: Atom
           url: /editors/Atom.html
+        - text: Notepad
+          url: /editors/Notepad.html
         - text: Vim
           url: /editors/vim.html
