Adding first years to contributors list. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -8,7 +8,7 @@
   title: Django Jazz Hands
 
 - name : Andy Wilson
-  title: Background Graphics Manager
+  title: The Honourary Coder
 
 - name : Batduck
   title: gramma correction for the real coder
@@ -16,14 +16,23 @@
 - name : Geraint Palmer
   title: The Traitor
 
+- name: James Hedge
+  title: ...Pending...
+
 - name : Jason Young
   title: You Know Who
 
 - name: Laura Saul
   title: The Code Officer
 
+- name: Preeti Sidhu
+  title: ...Pending...
+
 - name: Sam Luen-English
   title: The Teacher
+
+- name: Seva Zozin
+  title: The Padawan
 
 - name : Tim Standen
   title: The Code Janitor
@@ -33,3 +42,6 @@
 
 - name : Vince Knight
   title: Colonel Sarge
+
+- name: Will Dudley
+  title: ...Pending...
