Changing Alex's nickname

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -2,7 +2,7 @@
   title: The Flamboyant Coder
 
 - name : Alex Carney
-  title: The Real Coder
+  title: Leonardo
 
 - name : Ambrose Law
   title: Django Jazz Hands
