Adding Hannah to the contributor list

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -16,6 +16,9 @@
 - name : Geraint Palmer
   title: The Traitor
 
+- name : Hannah Lorrimore
+  title: Mother Hen
+
 - name: James Hedge
   title: ...Pending...
 
