Redesigned home page
So the home page has had a few changes:

    - Moved gource video and contributors list to the new get involved
      page
    - Made the blog more prominant by adding a list of the most recent
      posts
    - Added link to the blog archive to get to the full blog

Renamed inspiration to reference as I feel it makes more sense that way:

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,8 +9,8 @@
       url: /sessions.html
 - text: Code of conduct
   url: /coc.html
-- text: Inspiration
-  url: /inspiration.html
+- text: Reference
+  url: /reference.html
   subitems:
     - text: Editors
       url: /editors/index.html
@@ -39,5 +39,4 @@
     - text: Projects
       url: /projects/
 - text: Get involved
-  url: '#'
-
+  url: 'getinvolved.html'
