New nickname for Batduck

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -11,7 +11,7 @@
   title: The Honourary Coder
 
 - name : Batduck
-  title: gramma correction for the real coder
+  title: Glitch in the Matirx
 
 - name : Geraint Palmer
   title: The Traitor
