Still trying to persuade travis

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ markdown: kramdown
 encoding: utf-8
 description: Cardiff University School of Mathematics Code Club website
 keywords: cardiff,university,uni,maths,math,mathematics,code,club,website,python,java,pascal,vb,elbow,atom,vim,sublime
+
+gem:
+    - jekyll-gist
