--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ encoding: utf-8
 description: Cardiff University School of Mathematics Code Club website
 keywords: cardiff,university,uni,maths,math,mathematics,code,club,website,python,java,pascal,vb,elbow,atom,vim,sublime
 
-gem:
+gems:
     - jekyll-gist
