This is again just for me to try and make travis work locally. :imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -1,50 +1,67 @@
 - name : Adam Pohl
   title: The Webmaster
+  github-page: https://github.com/Huaraz2
 
 - name : Alex Carney
   title: Leonardo
+  github-page: https://github.com/
 
 - name : Ambrose Law
   title: Django Jazz Hands
+  github-page: https://github.com/
 
 - name : Andy Wilson
   title: The Honourary Coder
+  github-page: https://github.com/
 
 - name : Batduck
   title: Glitch in the Matirx
+  github-page: https://github.com/
 
 - name : Geraint Palmer
   title: The Traitor
+  github-page: https://github.com/
 
 - name : Hannah Lorrimore
   title: Mother Hen
+  github-page: https://github.com/
 
 - name: James Hedge
   title: ...Pending...
+  github-page: https://github.com/
 
 - name : Jason Young
   title: You Know Who
+  github-page: https://github.com/
 
 - name: Laura Saul
   title: The Code Officer
+  github-page: https://github.com/
 
 - name: Preeti Sidhu
   title: ...Pending...
+  github-page: https://github.com/
 
 - name: Sam Luen-English
   title: The Teacher
+  github-page: https://github.com/
 
 - name: Seva Zozin
   title: The Padawan
+  github-page: https://github.com/
 
 - name : Tim Standen
   title: The Code Janitor
+  github-page: https://github.com/
 
 - name : Toby Devlin
   title: The drive-by bootstrapper
+  github-page: https://github.com/
 
 - name : Vince Knight
   title: Colonel Sarge
+  github-page: https://github.com/
 
 - name: Will Dudley
   title: ...Pending...
+  github-page: https://github.com/
