Adding the link to Leanardo's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -4,7 +4,7 @@
 
 - name : Alex Carney
   title: Leonardo
-  github-page: https://github.com/
+  github-page: https://github.com/alcarney
 
 - name : Ambrose Law
   title: Django Jazz Hands
