Adding link to Django Jazz Hands' github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -8,7 +8,7 @@
 
 - name : Ambrose Law
   title: Django Jazz Hands
-  github-page: https://github.com/
+  github-page: https://github.com/Enyexlaw
 
 - name : Andy Wilson
   title: The Honourary Coder
