Adding link to The Honourary Coder's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -12,7 +12,7 @@
 
 - name : Andy Wilson
   title: The Honourary Coder
-  github-page: https://github.com/
+  github-page: https://github.com/BatDuck-Caboose
 
 - name : Batduck
   title: Glitch in the Matirx
