Adding link to Glitch in the Matirx's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -16,7 +16,7 @@
 
 - name : Batduck
   title: Glitch in the Matirx
-  github-page: https://github.com/
+  github-page: https://github.com/BatDuck-Caboose
 
 - name : Geraint Palmer
   title: The Traitor
