Adding link to The Traitor's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -20,7 +20,7 @@
 
 - name : Geraint Palmer
   title: The Traitor
-  github-page: https://github.com/
+  github-page: https://github.com/geraintpalmer
 
 - name : Hannah Lorrimore
   title: Mother Hen
