Adding link to Mother Hen's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -24,7 +24,7 @@
 
 - name : Hannah Lorrimore
   title: Mother Hen
-  github-page: https://github.com/
+  github-page: https://github.com/hhlorrimore
 
 - name: James Hedge
   title: ...Pending...
