Adding link to @LordTandy 's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -28,7 +28,7 @@
 
 - name: James Hedge
   title: ...Pending...
-  github-page: https://github.com/
+  github-page: https://github.com/LordTandy
 
 - name : Jason Young
   title: You Know Who
