Adding link to The Code Officer's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -36,7 +36,7 @@
 
 - name: Laura Saul
   title: The Code Officer
-  github-page: https://github.com/
+  github-page: https://github.com/Aurora256
 
 - name: Preeti Sidhu
   title: ...Pending...
