Adding link to preetiks' github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -40,7 +40,7 @@
 
 - name: Preeti Sidhu
   title: ...Pending...
-  github-page: https://github.com/
+  github-page: https://github.com/preetiks
 
 - name: Sam Luen-English
   title: The Teacher
