Adding link to The Teacher's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -44,7 +44,7 @@
 
 - name: Sam Luen-English
   title: The Teacher
-  github-page: https://github.com/
+  github-page: https://github.com/sluenenglish
 
 - name: Seva Zozin
   title: The Padawan
