Adding link to The Padawan's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -48,7 +48,7 @@
 
 - name: Seva Zozin
   title: The Padawan
-  github-page: https://github.com/
+  github-page: https://github.com/chelyabinsk
 
 - name : Tim Standen
   title: The Code Janitor
