Adding link to The Code Janitor's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -52,7 +52,7 @@
 
 - name : Tim Standen
   title: The Code Janitor
-  github-page: https://github.com/
+  github-page: https://github.com/timothyf1
 
 - name : Toby Devlin
   title: The drive-by bootstrapper
