Adding link to Colonel Sarge's github page. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -60,7 +60,7 @@
 
 - name : Vince Knight
   title: Colonel Sarge
-  github-page: https://github.com/
+  github-page: https://github.com/drvinceknight
 
 - name: Will Dudley
   title: ...Pending...
