Adding gitter integration with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,8 @@ script: rake
 env:
     global:
         - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+notifications:
+    webhooks:
+      urls:
+          - https://webhooks.gitter.im/e/84454152adce595e2ba6
