Adding project pages
Projects now get their own page on the website this means the following:

- Projects now get a list of tutorials that are written about them
  automatically added their page, as well as some information
  automatically extracted from `projects.yml`
- Projects now have a `tag` attribute in their entry in `projects.yml`
  relevant tutorials _must_ be tagged with this tag and `getstarted`
  for them to show up on the correct page
- This tag is also used to generate links to the project page so any new
  <project>.md file in `/projects/` _must_ match the tag  _exactly_ to
  be accessible from the website.
- A <project>.md page requires the following YAML front matter
  ```
  ---
  layout: project
  project: <name>
  ---
  ```
  where <name> is _exactly_ what is written as the top level name for
  the project in `projects.yml`.. For example the entry for the code
  club website in `projects.yml` now looks like the following:
  ```
  ccweb:
      name: "Code Club Website"
      github: ...
      description: ...
      ....
  ```
  So the YAML front matter for the code club site page looks like
  ```
  ---
  layout: project
  project: ccweb
  ---
  ```

Finally a few minor tweaks

- A list of projects now appears on a few pages, so this has been moved
  to `_includes/project_list.html` and included on the relevant pages
- Minor changes to the tags and categories of "How to make a blog post"
  tutorial so that it shows up on the code club website project page

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,6 +3,7 @@ ccweb:
   github: https://github.com/CardiffMathematicsCodeClub/CardiffMathematicsCodeClub.github.io
   description: 'The very website you are currently looking at.'
   active: true
+  tag: website
 
 moduleplan:
   name: 'A module planner'
@@ -10,6 +11,7 @@ moduleplan:
   description: 'A web based tool to graphically display course choice options.'
   link: http://module-planner.readthedocs.org/en/latest/
   active: false
+  tag: moduleplan
 
 axelrod:
   name: 'Axelrod'
@@ -17,6 +19,7 @@ axelrod:
   description: 'A repository used to reproduce Axelrods tournament.'
   link: http://axelrod.readthedocs.org/
   active: true
+  tag: axelrod
 
 thegame:
   name: 'The game has changed'
@@ -24,9 +27,11 @@ thegame:
   description: 'A game challenge run by github (progress... ongoing...)'
   link: https://github.com/blog/1972-the-game-has-changed
   active: false
+  tag: thegame
 
 elbow:
   name: 'ELBOW!!!'
   github: https://github.com/CardiffMathematicsCodeClub/elbow
   description: 'ELBOW ->(translate to french)-> COUDE ->(misspell)-> COUD ->(misspell again)-> CUOD -> Cardiff University Open Day'
   active: true
+  tag: elbow
