Adding Sam to contributor list. :smiling_imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -46,6 +46,10 @@
   title: The Teacher
   github-page: https://github.com/sluenenglish
 
+- name: Sam Richardson
+  title: Not Antoney
+  github-page: https://github.com/SamLRichardson
+
 - name: Seva Zozin
   title: The Padawan
   github-page: https://github.com/chelyabinsk
