For some reason I had James' github page wrong. oops :imp:

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -36,7 +36,7 @@ hannah:
 james:
   name: James Hedge
   title: ''
-  github-page: https://github.com/LordTandy
+  github-page: https://github.com/JamesHedge
 
 jason:
   name : Jason Young
