Adding micro workshops
- Adding a collection for workshops (every proposed workshop will be an
  md file in the `_workshops` folder)
- This sits under the Archive in the navigation bar
- Have a blog post about workshops.

Also:

- Moved outputs of tests to the gitignore.

--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,7 @@ keywords: cardiff,university,uni,maths,math,mathematics,code,club,website,python
 gems:
     - jekyll-gist
     - jekyll-paginate
+
+collections:
+  workshops:
+    output: true
