--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ keywords: cardiff,university,uni,maths,math,mathematics,code,club,website,python
 gems:
     - jekyll-gist
     - jekyll-paginate
+    - pygments
 
 collections:
   workshops:
