Theme Changer Implemented!
To start with this PR depends on my previous one (the css phase 2) #93

- We have a new script in `/js` called `theme-changer.js`
- It is responsible for allowing the user to select which theme (css
  stylesheet) is applied to the website.
- It makes use of HTML5's `localStorage` feature, which allows this
  choice to be made persistent between browsing sessions without
  resorting to cookies.
- Currently the only themes available are `Code Club Classic` (the
  normal theme we all know and love) and `Not Yet Implemented` a test
  theme by me which is identical to the classic one except there is a
  slightly more blue background color for testing purposes
- This PR also adds a footer to the website, the footer includes the
  following:
     + The current version of the code club website (taken from
       @Huarez2's tags)
     + The date that the current site was generated
     + The name of the currently applied theme and its version
     + The theme's author
     + A dropdown which allows the user to select the theme they want

- Theme's are "installed" by editing the new `_data/themes/yml` file.
- Currently themes take the following form (using the classic theme as
  an example):

  ```
  name: Code Club Classic
  shortname: main
  version: 1.0
  author: Everyone
  ```
  *IMPORTANT!* The `shortname` field *must* match the name of the
  stylesheet in the `/css` directory (excluding the extension)

- I think that's all the changes....

One final note. This is only the basic framework in place, subsequent
changes are required and will be done in following PRs:

- Currently a "theme" doesn't apply to the whole site, since the past
  sessions page and the flexnav menu have their own stylesheets. I will
  work on incorporating things into a single generated stylesheet _while
  still keeping things separate and easy to edit_
- It would be a good idea to have a base minimal theme, so that there is
  an easy start for people who wish to make thei

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 #Site settings
 title: Cardiff Math Code Club
 url: "http://CardiffMathematicsCodeClub.github.io"
+version: 3.5.0
 
 markdown: kramdown
 highlighter: pygments
