New menu and archive page!
- Flexnav is gone! So the site no longer depends on flexnav, hence
  `css/flexnav.css`, `js/jquery.flexnav.js` and
  `js/jquery.flexnav.min.js` have been removed

- Also any reference to these files have been removed from
  `_includes/common_head.html`

- Instead the menu has been re-implemented, but there are no longer any
  submenus. It now uses a few lines of jquery in `js/menu.js` to be able
  to show and hide it while in mobile view.

- The removal of support for submenus now mean that the html and yaml
  code which describes the menu has been much simplified in
  `_includes/header.html` and `_data/menu.yml` respectively

- Responsive css rules have been added for the menu in
  `_sass/_layouts/base.scss` and `_sass/_elements/base.scss`.

- This also includes a fix for `_data/sessions.yml` where an alignment
  issue was causing the spring term sessions to be hidden

- So that the blog, workshops and past sessions are still accessible the
  archive menu item links to the new `archive.md` page which includes:

    + A list of the 3 most recent blog posts

    + A list of at most 3 past session quotes (only 1 will be currently
    generated since there is only one quote for this semester so far)

    + A list of at most 3 future workshops, if no workshops are
    scheduled then there is a message inviting people to go to our
    issues and request one.

    + Of course there are also links to each of the sections mentioned
    above so that people can see them in full.

A few final notes. All the styling for the website is now controlled
through a single css file. This means that themes now control the look
accross the entire website!

I still need to make a few small changes to tidy things up and get
things ready to release themes properly, but this should constitute a
single PR.

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,42 +1,10 @@
 - text: Home
-  url: /
+  url: '/'
 - text: Archive
-  url: '/blog/'
-  subitems:
-    - text: Blog
-      url: /blog/
-    - text: Micro Workshops
-      url: /workshops/
-    - text: Past Sessions
-      url: /sessions.html
+  url: '/archive.html'
 - text: Code of conduct
-  url: /coc.html
+  url: '/coc.html'
 - text: Reference
-  url: /reference.html
-  subitems:
-    - text: Editors
-      url: /editors/index.html
-      subitems:
-        - text: Atom
-          url: /editors/Atom.html
-        - text: Notepad
-          url: /editors/Notepad.html
-        - text: Vim
-          url: /editors/vim.html
-    - text: Languages
-      url: /languages/index.html
-      subitems:
-        - text: Brainf**k
-          url: /languages/brainfk.html
-        - text: C
-          url: /languages/C.html
-        - text: C++
-          url: /languages/C++.html
-        - text: Haskell
-          url: /languages/haskell.html
-        - text: Java
-          url: /languages/java.html
-        - text: Python
-          url: /languages/python.html
+  url: '/reference.html'
 - text: Get involved
   url: '/getinvolved.html'
