--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Site settings
 title: Cardiff Math Code Club
 url: "http://CardiffMathematicsCodeClub.github.io"
-version: 3.5.322
+version: 3.5.290
 
 markdown: kramdown
 kramdown:
@@ -14,6 +14,9 @@ paginate_path: "/blog/page:num"
 encoding: utf-8
 description: Cardiff University School of Mathematics Code Club website
 keywords: cardiff,university,uni,maths,math,mathematics,code,club,website,python,java,pascal,vb,elbow,atom,vim,sublime
+
+sass:
+    style: compressed
 
 gems:
     - jekyll-gist
