Final changes to themeing system
- `_elements` folder has been moved to `_main`
- There id now a `_layout.scss` file which guarantees responsiveness for
  any theme which uses it
- Not Yet Implemented has been renamed to minimal and is now the base
  theme which people can start from since it contains no stlying
- Blog post introducing themes has been added

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -3,8 +3,8 @@
   version: 1.0
   author: Everyone
 
-- name: Not Yet Implemented
-  shortname: todo
+- name: Minimalist
+  shortname: minimal
   version: 0.1
   author: Alex
 
