Changed name of theme, I like this one better. :smiling_imp:

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -13,7 +13,7 @@
   version: 0.1
   author: Sam
 
-- name: Inverted Colours
+- name: Classic Inverted
   shortname: inverted
   version: 0.1
   author: Adam
