Adding Cardiff Red Theme
I'm not very inventive with names, so since I use quite a bit of red in
this theme I am calling it "Cardiff Red"

This is my first stab at a theme and I think I will be tweaking it for
quite a while yet!

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -22,3 +22,8 @@
   shortname: matrix
   version: 0.3
   author: Adam
+
+- name: Cardiff Red
+  shortname: cardiffred
+  version: 0.1
+  author: Alex
