First draft of solarized theme.

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -27,3 +27,8 @@
   shortname: cardiffred
   version: 0.2
   author: Alex
+
+- name: Solarizaed
+  shortname: solarized
+  version: 0.1
+  author: Vince
