New theme! Cardiff Rouge
This adds a new theme cardiff rouge, a lighter version of Cardiff Red

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -32,3 +32,8 @@
   shortname: solarized
   version: 0.1
   author: Vince
+
+- name: Cardiff Rouge
+  shortname: cardiffrouge
+  version: 0.1
+  author: alex
