Changing Vince's title

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -80,7 +80,7 @@ toby:
 
 vince:
   name : Vince Knight
-  title: 'Colonel Sarge'
+  title: 'DAS KEYBOARD!!!'
   github-page: https://github.com/drvinceknight
 
 will:
