Changing name of theme

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -13,8 +13,8 @@
   version: 0.1
   author: Sam
 
-- name: Preeti's Theme
-  shortname: PINK
+- name: Princess Peach's Theme
+  shortname: pink
   version: 0.1
   author: Adam
 
