Adding stuff for new themes. :smiling_imp:

--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -18,6 +18,16 @@
   version: 0.1
   author: Adam
 
+- name: Luigi's Theme
+  shortname: lime
+  version: 0.1
+  author: Adam
+
+- name: DEADPOOL
+  shortname: red
+  version: 0.1
+  author: Adam
+
 - name: Classic Inverted
   shortname: inverted
   version: 0.1
