Adding Tandy to contributors

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -73,6 +73,11 @@ stephanie:
     title: 'Pixar'
     github-page: https://github.com/StephanieAngharad
 
+tandy:
+    name: Tandy
+    title: The Final Tandy
+    github-page: https://github.com/LordTandy
+
 tim:
   name : Tim Standen
   title: 'The Code Janitor'
